# ece1373h-final-project

./: README.md
embedded_dev/: ps7_debug_setup.tcl  spike_sort.c
hls/: .gitignore  Makefile  test_all.sh
hls/src/: bar.cpp  batch_norm_2d.cpp  batch_norm_2d.h  cnn.cpp  cnn.h  config.h  conv.cpp  conv.h  conv_batch_relu.cpp  conv_batch_relu.h  conv_batch_relu_max.cpp  conv_batch_relu_max.h  conv_relu.cpp  conv_relu.h  fc.cpp  fc.h  full_nn.cpp  full_nn.h  max_pool_2d.cpp  max_pool_2d.h  pca.cpp  pca.h  relu.cpp  spike_deepclassifier.cpp  spike_deepclassifier.h  (+5 more)
hls_proj/: .gitignore  README.md
src/: cnn.cpp  relu.h
tb/: test_relu.cpp
tb_gen_data/: .flake8  .gitignore  README.md  compare_bins.py  pyproject.toml  test.mat
tb_gen_data/inputs/: trainedModelDeepNetCNN.onnx  waveform_0.txt
tb_gen_data/outputs/: cnn.txt  fc.txt  relu.txt
tb_gen_data/tb_gen_data/: config.py  gen_all.py  gen_bar.py  gen_base.py  gen_batch_norm.py  gen_cnn.py  gen_conv.py  gen_conv_batch_relu.py  gen_conv_batch_relu_max.py  gen_conv_relu.py  gen_fc.py  gen_full_nn.py  gen_load_weights_base.py  gen_matlab_bar.py  gen_matlab_cnn.py  gen_matlab_spike_deeptector.py  gen_max_pool_2d.py  gen_pca.py  gen_relu.py  gen_spike_deepclassifier.py  gen_spike_deeptector.py  gen_zero_mean.py  utils.py
tb_gen_data/tb_gen_data/layers/: cnn.py  fc.py
tb_gen_data/tb_gen_data/mem/: mem.py  mem_chunk.py
tb_gen_data/tb_gen_data/models/: bar.py  conv_batch_relu.py  conv_batch_relu_max.py  conv_relu.py  full_nn.py  matlab_cnn.py  pca.py  spike_deepclassifier.py  spike_deeptector.py  zero_mean.py
(+114 files in other folders)
