[tool.poetry]
name = "tb_gen_data"
version = "0.1.0"
description = ""
authors = ["Fabian Torres <36959980+ftorres16@users.noreply.github>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = "^1.8.1"
onnx2pytorch = "^0.2.0"
onnxruntime = "^1.8.1"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.1"
ipdb = "^0.13.7"
ipython = "^7.22.0"
pandas = "^1.3.2"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
